[gd_scene load_steps=32 format=3 uid="uid://yrdoow4p5aos"]

[ext_resource type="Script" path="res://Enemy_branch/scripts/Rammus/basic_enemy_g.gd" id="1_b1dai"]
[ext_resource type="Script" path="res://Enemy_branch/scripts/State_Machine_Template/StateMachine.gd" id="2_7cn6j"]
[ext_resource type="Script" path="res://Enemy_branch/scripts/Rammus/base_state.gd" id="2_bbwx0"]
[ext_resource type="Script" path="res://Enemy_branch/scripts/Rammus/charging_up_state.gd" id="3_i1hnu"]
[ext_resource type="Script" path="res://Enemy_branch/scripts/Rammus/executing_charge_state.gd" id="4_1og6g"]
[ext_resource type="Script" path="res://Enemy_branch/scripts/Rammus/execute_charge_2.gd" id="5_s0oia"]
[ext_resource type="Script" path="res://Enemy_branch/scripts/Rammus/cooldown_state.gd" id="6_1br8b"]
[ext_resource type="Texture2D" uid="uid://dsn7llgddewdg" path="res://Enemy_branch/sprites/Golem-sheet.png" id="7_x6n6s"]
[ext_resource type="PackedScene" uid="uid://be48etet3ru4m" path="res://RadialMovement/gravity.tscn" id="9_shrrf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_la868"]
atlas = ExtResource("7_x6n6s")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnqg4"]
atlas = ExtResource("7_x6n6s")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcufd"]
atlas = ExtResource("7_x6n6s")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_df6yi"]
atlas = ExtResource("7_x6n6s")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaicd"]
atlas = ExtResource("7_x6n6s")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wc58"]
atlas = ExtResource("7_x6n6s")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3ugj"]
atlas = ExtResource("7_x6n6s")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_570ku"]
atlas = ExtResource("7_x6n6s")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4nde"]
atlas = ExtResource("7_x6n6s")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6rge"]
atlas = ExtResource("7_x6n6s")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cule8"]
atlas = ExtResource("7_x6n6s")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph0b4"]
atlas = ExtResource("7_x6n6s")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd53k"]
atlas = ExtResource("7_x6n6s")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6rob"]
atlas = ExtResource("7_x6n6s")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_58s5s"]
atlas = ExtResource("7_x6n6s")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3wns"]
atlas = ExtResource("7_x6n6s")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_un1e0"]
atlas = ExtResource("7_x6n6s")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xul5c"]
atlas = ExtResource("7_x6n6s")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x581w"]
atlas = ExtResource("7_x6n6s")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mq8m4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_la868")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnqg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcufd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df6yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaicd")
}],
"loop": false,
"name": &"charging",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wc58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3ugj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_570ku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4nde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6rge")
}],
"loop": false,
"name": &"cooldown",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cule8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph0b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd53k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6rob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58s5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un1e0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xul5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x581w")
}],
"loop": true,
"name": &"executing_charge",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wv547"]
size = Vector2(8, 11)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4h4sg"]
radius = 50.0
height = 104.0

[node name="basic_enemy_g" type="CharacterBody2D"]
collision_layer = 64
script = ExtResource("1_b1dai")

[node name="state_machine" type="Node" parent="."]
script = ExtResource("2_7cn6j")

[node name="Base_state" type="Node" parent="state_machine" node_paths=PackedStringArray("timer")]
script = ExtResource("2_bbwx0")
timer = NodePath("../Timer")

[node name="Chargeup_state" type="Node" parent="state_machine" node_paths=PackedStringArray("timer")]
script = ExtResource("3_i1hnu")
timer = NodePath("../Timer")

[node name="Execute_charge" type="Node" parent="state_machine" node_paths=PackedStringArray("timer")]
script = ExtResource("4_1og6g")
timer = NodePath("../Timer")
charge_time = 0.2
charge_speed = 600

[node name="Execute_charge_2" type="Node" parent="state_machine"]
script = ExtResource("5_s0oia")

[node name="Cooldown_state" type="Node" parent="state_machine" node_paths=PackedStringArray("timer")]
script = ExtResource("6_1br8b")
timer = NodePath("../Timer")

[node name="Timer" type="Timer" parent="state_machine"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_mq8m4")
animation = &"executing_charge"
autoplay = "default"

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(13, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-13, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_wv547")

[node name="snipe_range" type="Area2D" parent="."]
position = Vector2(0, -6)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="snipe_range"]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_4h4sg")

[node name="Gravity" parent="." instance=ExtResource("9_shrrf")]
